syntax = "proto3";

option go_package = "./proto/btc";

enum ReturnCode{
  SUCCESS = 0;
  ERROR = 1;
}

enum TxStatus{
  NotFound = 0;
  Pending = 1;
  Failed = 2;
  Success = 3;
  ContractExecuteFailed = 4;
  Other = 5;
}

message Vin{
  string hash = 1;
  uint32 vout = 2;
  uint64  amount = 3;
  string address = 4;
  uint64 sequence = 5;
}

message ScriptPubKey {
    string asm = 1;
    string desc =2;
    string hex = 3;
    string address = 4;
    string type = 5;
}

message Vout{
  string address = 1;
  uint64 amount = 2;
  uint32 index = 3;
  ScriptPubKey script_pubKey = 4;
}

message Address {
  string address = 1;
}

message Value {
  string value = 1;
}

message TxMessage {
  string hash = 1;
  uint32 index = 2;
  repeated Address froms = 3;
  repeated Address tos = 4;
  repeated Value values = 7;
  string fee = 5;
  TxStatus status = 6;
  int32 type = 8;
  string height = 9;
  string brc20_address = 10;
  string datetime = 11;
}

message ConvertAddressRequest{
  string consumer_token = 1;
  string network = 2;
  string format = 3;
  string public_key = 4;
}

message ConvertAddressResponse{
  ReturnCode code = 1;
  string msg = 2;
  string address = 3;
}

message ValidAddressRequest{
  string consumer_token = 1;
  string network = 2;
  string format = 3;
  string address = 4;
}

message ValidAddressResponse{
  ReturnCode code = 1;
  string msg = 2;
  bool valid = 3;
}

message AccountRequest{
  string consumer_token = 1;
  string network = 2;
  string address = 3;
  string brc20_address = 4;
}

message AccountResponse {
  ReturnCode code = 1;
  string msg = 2;
  string network = 3;
  string balance = 4;
}

message UnspentOutput {
  string tx_id = 1;
  string tx_hash_big_endian = 2;
  uint64 tx_output_n = 3;
  string script = 4;
  string height = 5;
  string block_time = 6;
  string address = 7;
  string unspent_amount = 8;
  string value_hex = 9;
  uint64 confirmations = 10;
  uint64 index = 11;
}

message UnspentOutputsRequest{
  string consumer_token = 1;
  string network = 2;
  string address = 3;
}

message UnspentOutputsResponse{
  ReturnCode code = 1;
  string msg = 2;
  repeated UnspentOutput unspent_outputs = 3;
}

message BlockNumberRequest {
  string consumer_token = 1;
  int64 height = 2;
}

message BlockHashRequest {
  string consumer_token = 1;
  string hash = 2;
}

message TransactionList {
  string hash = 1;
  string fee = 2;
  repeated Vin vin = 3;
  repeated Vout vout = 4;
}

message BlockResponse{
  ReturnCode code = 1;
  string msg = 2;
  uint64 height = 3;
  string hash = 4;
  repeated TransactionList tx_list = 5;
}

message BlockHeaderHashRequest{
  string hash = 2;
}

message BlockHeaderNumberRequest{
  string network = 2;
  int64 height = 3;
}

message BlockHeaderResponse{
  ReturnCode code = 1;
  string msg = 2;
  string prev_hash = 3;
  string block_hash = 4;
  string merkle_root = 5;
  string number = 6;
  uint64 time = 7;
}

message SendTxRequest{
  string consumer_token = 1;
  string coin = 2;
  string network = 3;
  string raw_tx = 4;
}

message SendTxResponse {
  ReturnCode code = 1;
  string msg = 2;
  string tx_hash = 3;
}

message TxAddressRequest{
  string consumer_token = 1;
  string coin = 2;
  string network = 3;
  string address = 4;
  string brc20_address = 5;
  uint32 page = 6;
  uint32 pagesize = 7;
  string cursor = 8;
}


message TxAddressResponse {
  ReturnCode code = 1;
  string msg = 2;
  repeated TxMessage tx = 3;
}


message TxHashRequest{
  string consumer_token = 1;
  string coin = 2;
  string network = 3;
  string hash = 4;
}

message TxHashResponse {
  ReturnCode code = 1;
  string msg = 2;
  TxMessage tx = 3;
}

message UnSignTransactionRequest {
  string consumer_token = 1;
  string network = 2;
  string fee = 3;
  repeated Vin vin = 4;
  repeated Vout vout = 5;
}

message UnSignTransactionResponse {
  ReturnCode code = 1;
  string msg = 2;
  bytes tx_data = 3;
  repeated bytes sign_hashes = 4;
}

message SignedTransactionRequest {
  string consumer_token = 1;
  string network = 2;
  bytes tx_data = 3;
  repeated bytes signatures = 4;
  repeated bytes public_keys = 5;
}

message SignedTransactionResponse {
  ReturnCode code = 1;
  string msg = 2;
  bytes signed_tx_data = 3;
  bytes hash = 4;
}

message VerifyTransactionRequest {
  string network = 1;
  string public_key = 2;
  string signature = 3;
}

message VerifyTransactionResponse {
  ReturnCode code = 1;
  string msg = 2;
  bool verify = 3;
}

message DecodeTransactionRequest {
  string network = 1;
  bytes raw_data = 2;
  repeated Vin vins = 3;
}

message DecodeTransactionResponse {
  ReturnCode code = 1;
  string msg = 2;
  string tx_hash = 3;
  TxStatus status = 4;
  repeated Vin vins = 5;
  repeated Vout vouts = 6;
  repeated bytes sign_hashes = 7;
  string cost_fee = 8;
  uint64 block_height = 9;
  uint64 block_time = 10;
}

service WalletBtcService {
  rpc convertAddress(ConvertAddressRequest) returns(ConvertAddressResponse){}
  rpc validAddress(ValidAddressRequest) returns(ValidAddressResponse){}
  rpc getAccount(AccountRequest) returns (AccountResponse) {}
  rpc getUnspentOutputs(UnspentOutputsRequest) returns (UnspentOutputsResponse) {}
  rpc getBlockByNumber(BlockNumberRequest) returns (BlockResponse) {}
  rpc getBlockByHash(BlockHashRequest) returns (BlockResponse) {}
  rpc getBlockHeaderByHash(BlockHeaderHashRequest) returns(BlockHeaderResponse){}
  rpc getBlockHeaderByNumber(BlockHeaderNumberRequest) returns (BlockHeaderResponse) {}
  rpc SendTx(SendTxRequest) returns (SendTxResponse) {}
  rpc getTxByAddress(TxAddressRequest) returns (TxAddressResponse) {}
  rpc getTxByHash(TxHashRequest) returns (TxHashResponse) {}
  rpc buildUnSignTransaction(UnSignTransactionRequest) returns(UnSignTransactionResponse){}
  rpc buildSignedTransaction(SignedTransactionRequest) returns(SignedTransactionResponse){}
  rpc decodeTransaction(DecodeTransactionRequest) returns(DecodeTransactionResponse){}
  rpc verifySignedTransaction(VerifyTransactionRequest) returns(VerifyTransactionResponse){}
}
